--- a/mainsite/templates/include_hide_ads.html
+++ b/mainsite/templates/include_hide_ads.html
@@ -1,7 +1,15 @@
 {% load cms_tags sekizai_tags %}
+
 {% addtoblock "js" %}
     <script type="text/javascript" charset="utf-8">
         $( document ).ready(function() {
+
+            if ($("#adLeaderboard").find("img").length > 0) {
+                //do something
+            } else {
+                // do something else
+                $("#adZone1").hide(0);
+            }
 
             if ($("#adZone2").find("img").length > 0) {
                 //do something
