--- a/spe_polls/templates/cms/plugins/poll.html
+++ b/spe_polls/templates/cms/plugins/poll.html
@@ -1,9 +1,9 @@
-{% block "poll_header" %}
+{% block poll_header %}
 <h1>{{ poll.question }}</h1>
 {% endblock %}
 {% if can_vote %}
-{% include "cms/plugins/poll_form.html" %}
+    {% include "cms/plugins/poll_form.html" %}
 {% else %}
-{% include "cms/plugins/poll_results.html" %}
+    {% include "cms/plugins/poll_results.html" %}
 {% endif %}
-{% block "poll_footer" %}{% endblock %}
+{% block poll_footer %}{% endblock %}
