--- a/spe_links/templates/spe_links/plugins/links_plugin.html
+++ b/spe_links/templates/spe_links/plugins/links_plugin.html
@@ -3,11 +3,11 @@
         <span class="section-heading">{{ instance.category.title }}</span>
 		<ul id="{{ instance.category.class_name }}-list">
         {% for link in instance.links %}
-            <li><a href="{{ link.url }}"><span class="title">{{ link.title }}</span></a></li>
+            <li><a href="{{ link.get_absolute_url }}"><span class="title">{{ link.title }}</span></a></li>
         {% endfor %}
 		</ul>
-        {% if instance.category.url and instance.category.title %}
-		    <a class="see-all" id="{{ instance.category.class_name }}" href="{{ instace.category.url }}">All {{ instance.category.title }}<span></span></a>
+        {% if instance.category.get_absolute_url and instance.category.title %}
+		    <a class="see-all" id="{{ instance.category.class_name }}" href="{{ instace.category.get_abolute_url }}">All {{ instance.category.title }}<span></span></a>
         {% endif %}
     </div>
 {% endif %}
