--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -3,7 +3,7 @@
 ====================================================================== */
 @import 'vars';
 
-.tile, .tile-blue, .tile-white, .tile-alert, .eventsNearYou {
+.tile, .tile-blue, .tile-white, .tile-alert, .tile-poll, .eventsNearYou {
   //box-shadow:           0 1px 2px $col-boxshadow;
   margin-bottom:        20px;
   padding:              15px;
@@ -275,6 +275,25 @@
       .eventType {
         font-weight:    $font-bold;
       }
+    }
+  }
+}
+.tile-poll {
+  background-color:     $col-textblue;
+  color:                $col-speblue;
+
+  h1 {
+    color: #3d4044;
+    font-size: 25px;
+    border-bottom: 1px dotted grey;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+  }
+
+  a {
+    color:              $col-speblue;
+    &:hover {
+      color:            $col-white;
     }
   }
 }
