--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -309,7 +309,7 @@ a:hover { text-decoration: none; }
 /* VARIABLES
 ====================================================================== */
 /* Images */
-.tile, .tile-blue, .tile-white, .tile-alert, .eventsNearYou { margin-bottom: 20px; padding: 15px; min-width: 150px; }
+.tile, .tile-blue, .tile-white, .tile-alert, .tile-poll, .eventsNearYou { margin-bottom: 20px; padding: 15px; min-width: 150px; }
 
 .tile-alert { background-color: #bf1d21; color: white; }
 .tile-alert p { margin: 0; }
@@ -380,6 +380,11 @@ a:hover { text-decoration: none; }
 .eventsNearYou .eachEvent .eventName { font-weight: 700; }
 .eventsNearYou .eachEvent .eventDetails { font-size: 12px; text-align: right; }
 .eventsNearYou .eachEvent .eventDetails .eventType { font-weight: 700; }
+
+.tile-poll { background-color: #a3bce4; color: #26416c; }
+.tile-poll h1 { color: #3d4044; font-size: 25px; border-bottom: 1px dotted grey; padding-bottom: 10px; margin-bottom: 15px; }
+.tile-poll a { color: #26416c; }
+.tile-poll a:hover { color: white; }
 
 /* =================================================================== */
 /* AD ZONES
