--- a/spe_polls/templates/cms/plugins/poll_form.html
+++ b/spe_polls/templates/cms/plugins/poll_form.html
@@ -1,12 +1,12 @@
 {% load i18n %}
 
 {% block form_tag %}
-<form method="POST" action="{% url "polls:vote" %}">
-{% endblock %}
-  {% csrf_token %}
-  <input type="hidden" name="poll" value="{{ poll.id }}"/>
-  <input type="hidden" name="next" value="{{ request.path }}"/>
-  {% for choice in poll.choice_set.iterator %}
+        <form method="POST" action="{% url "polls:vote" %}">
+    {% endblock %}
+    {% csrf_token %}
+    <input type="hidden" name="poll" value="{{ poll.id }}"/>
+    <input type="hidden" name="next" value="{{ request.path }}"/>
+    {% for choice in poll.choice_set.iterator %}
     {% with choice.id as id %}
       {% block choice %}
         <div class="radiogroup">
@@ -15,10 +15,10 @@
         </div>
       {% endblock %}
     {% endwith %}
-  {% endfor %}
-  {% block form_submit %}
-  <button type="submit">{% trans "Vote" %}</button>
-  {% endblock %}
-{% block form_tag_close %}
-</form>
-{% endblock %}
+    {% endfor %}
+    {% block form_submit %}
+      <button type="submit">{% trans "Vote" %}</button>
+    {% endblock form_submit %}
+    {% block form_tag_close %}
+        </form>
+{% endblock form_tag_close %}
