--- a/spe_polls/templates/cms/plugins/poll_results.html
+++ b/spe_polls/templates/cms/plugins/poll_results.html
@@ -1,7 +1,7 @@
 {% load poll_tags i18n %}
 
 {% block results_header %}
-<h3>{% trans "Results" %}</h3>
+    <h3>{% trans "Results" %}</h3>
 {% endblock %}
 {% with poll.max_votes as max %}
   {% for choice in poll.choice_set.iterator %}
@@ -13,4 +13,5 @@
     {% endblock %}
   {% endfor %}
 {% endwith %}
-{% block results_footer %}{% endblock %}
+{% block results_footer %}
+{% endblock %}
