--- a/spe_polls/templates/cms/plugins/poll_form.html
+++ b/spe_polls/templates/cms/plugins/poll_form.html
@@ -17,7 +17,7 @@
     {% endwith %}
     {% endfor %}
     {% block form_submit %}
-      <button type="submit">{% trans "Vote" %}</button>
+      <button type="submit" class="btn btn-default">{% trans "Vote" %}</button>
     {% endblock form_submit %}
     {% block form_tag_close %}
         </form>
