--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -283,11 +283,17 @@
   color:                $col-speblue;
 
   h1 {
-    color: #3d4044;
-    font-size: 25px;
-    border-bottom: 1px dotted grey;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
+    color:              $col-white;
+    font-size:          25px;
+    border-bottom:      1px dotted grey;
+    padding:            0 0 10px 0;
+    margin:             0 0 10px 0;
+  }
+
+  .btn {
+    width:              100%;
+    font-weight:        $font-bold;
+    margin-top:         20px;
   }
 
   a {
