--- a/spe_polls/templates/cms/plugins/poll.html
+++ b/spe_polls/templates/cms/plugins/poll.html
@@ -1,12 +1,14 @@
 {% block poll_header %}
     <div class="tile-poll">
-    <h1>{{ poll.question }}</h1>
-{% endblock %}
+{#    <h1>{{ poll.question }}</h1>#}
+{% endblock poll_header %}
+
 {% if can_vote %}
     {% include "cms/plugins/poll_form.html" %}
 {% else %}
     {% include "cms/plugins/poll_results.html" %}
 {% endif %}
+
 {% block poll_footer %}
     </div><!-- tile-poll end -->
-{% endblock %}
+{% endblock poll_footer %}
