put back endblock

--- a/spe_blog/templates/spe_blog/detail.html
+++ b/spe_blog/templates/spe_blog/detail.html
@@ -34,5 +34,4 @@
         </div>
     </div>
 
-{#    {% include 'include_hide_ads.html' %}#}
-    {% include 'z_boostrap_size_indicator.html' %}
+{% endblock %}
