--- a/spe_blog/templates/spe_blog/plugins/issues_by_year.html
+++ b/spe_blog/templates/spe_blog/plugins/issues_by_year.html
@@ -9,16 +9,24 @@
                 <div class="row issuebar" data-toggle="collapse" data-parent="#accordion" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">
                 {#                        <div class="row issuebar" data-toggle="collapse" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">#}
                     <hr class="tiletitlehr">
-                    <h1 class="tiletitles">{{ issue.date.year }}</h1>
+                        <h1 class="tiletitles">{{ issue.date.year }}
+                            <div class="plusSymbol"><i class="fa fa-plus"></i></div>
+                            <div class="minusSymbol"><i class="fa fa-minus"></i></div>
+                        </h1>
+
                 </div>
                 <div id="collapse{{ issue.date.year }}" class="panel-collapse collapse in row">
             {% else %}
                 {% ifchanged issue.date.year %}
                     </div>
-                    <div class="row issuebar" data-toggle="collapse" data-parent="#accordion" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">
+                    <div class="row issuebar collapsed" data-toggle="collapse" data-parent="#accordion" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">
                     {#                            <div class="row issuebar" data-toggle="collapse" data-target="#collapse{{ issue.date.year }}" aria-expanded="true" aria-controls="collapse{{ issue.date.year }}">#}
                         <hr class="tiletitlehr">
-                        <h1 class="tiletitles">{{ issue.date.year }}</h1>
+                        <h1 class="tiletitles">{{ issue.date.year }}
+                            <div class="plusSymbol"><i class="fa fa-plus"></i></div>
+                            <div class="minusSymbol"><i class="fa fa-minus"></i></div>
+                        </h1>
+
                     </div>
                     <div id="collapse{{ issue.date.year }}" class="panel-collapse collapse row">
                 {% endifchanged %}
