--- a/mainsite/static/www/css/_footer.scss
+++ b/mainsite/static/www/css/_footer.scss
@@ -1,4 +1,3 @@
-
 /* =================================================================== */
 /* FOOTER
 ====================================================================== */
@@ -27,7 +26,7 @@
 #legal-links { margin:.5em 0 0 0; }
 
 .copyright, #legal-links li { font-size:14px; }
-.copyright { float:left;width:100%;margin:28px 0 0 0;clear:both;border-top:1px solid $col-copygrey;padding-top:4px;color:$col-spegrey; }
+.copyright { float:left;width:100%;margin:28px 0 0 0;clear:both;border-top:1px solid $col-copygrey;padding-top:4px;color:$col-darkgrey; }
 
 #social-media-links {
   //min-width: 420px;
