--- a/mainsite/static/ogf/css/_ogfcontent.scss
+++ b/mainsite/static/ogf/css/_ogfcontent.scss
@@ -591,3 +591,17 @@
     }
   }
 }
+
+.inLineBox {
+  background-color:     $col-ogflightgrey;
+  padding:              15px;
+  margin:               20px 0;
+
+  h3 {
+    padding:            0 0 15px 0;
+    margin:             0 0 15px 0;
+    border-bottom:      1px dotted $col-boxshadow;
+    font-size:          20px;
+    font-weight:        $font-bold;
+  }
+}
