--- a/mainsite/static/www/css/inline.scss
+++ b/mainsite/static/www/css/inline.scss
@@ -1,6 +1,19 @@
 @import 'vars';
 
-.inLineBox {
+.wwwInLineBox {
+  background-color:     $col-sprlghtgry;
+  padding:              15px;
+  margin:               20px 0;
+
+  h3 {
+    padding:            0 0 15px 0;
+    margin:             0 0 15px 0;
+    border-bottom:      1px dotted $col-darkgrey;
+    font-size:          20px;
+    font-weight:        $font-bold;
+  }
+}
+.ogfInLineBox {
   background-color:     $col-sprlghtgry;
   padding:              15px;
   margin:               20px 0;
