--- a/spe_blog/templates/spe_blog/plugins/bread_crumb.html
+++ b/spe_blog/templates/spe_blog/plugins/bread_crumb.html
@@ -5,7 +5,7 @@
     <p></p>
 <ul>
     {% block breadcrumb %}
-    {% show_breadcrumb %}
+{#    {% show_breadcrumb %}#}
     {% endblock %}
 </ul>
 </div>
