--- a/mainsite/templates/html5_bootstrap.html
+++ b/mainsite/templates/html5_bootstrap.html
@@ -5,6 +5,10 @@
     <script src="{% static 'js/jquery/jquery-1.12.0.min.js' %}"></script>
     <script src="{% static 'js/jquery/jquery-migrate-1.2.1.min.js' %}"></script>
 
+    <script type="text/javascript" async
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 
