--- a/mainsite/templates/twa_base.html
+++ b/mainsite/templates/twa_base.html
@@ -18,13 +18,13 @@
 
 {% block content_header %}
     <!-- HEADER Begin -->
-        <div class="row adZone1" id="adZone1">
-            <div class="col-md-12 text-center" id="adLeaderboard">
-                <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 1 728x90 [Any Dimension] -->
-                <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79084&oid=7699&wd=-1&ht=-1&target=_blank&noerror=1"></script>
-                <!-- AdSpeed.com End -->
-            </div>
-        </div>
+{#        <div class="row adZone1" id="adZone1">#}
+{#            <div class="col-md-12 text-center" id="adLeaderboard">#}
+{#                <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 1 728x90 [Any Dimension] -->#}
+{#                <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79084&oid=7699&wd=-1&ht=-1&target=_blank&noerror=1"></script>#}
+{#                <!-- AdSpeed.com End -->#}
+{#            </div>#}
+{#        </div>#}
 
         <div class="row" id="topbar">
             <div class="col-sm-6 topbarcol">
@@ -146,23 +146,7 @@
     <!-- FOOTER END -->
         <!-- div id="testmessage">REPLACE THIS</div -->
 
-    {% addtoblock "js" %}
-        <script type="text/javascript" charset="utf-8">
-            $( document ).ready(function() {
-
-{#                $("#testmessage").text("BEEN REPLACED");#}
-
-                if ($("#adLeaderboard").find("img").length > 0) {
-                    //do something
-{#                    $("#adZone1").text("HAS IMAGE");#}
-                } else {
-                    // do something else
-                    $("#adZone1").hide(0);
-                }
-
-            });
-        </script>
-    {%  endaddtoblock %}
+    {% include "include_hide_ads.html" %}
 
 {% endblock content_footer %}
 
