--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -436,3 +436,5 @@ a:hover { text-decoration: none; }
 .margZero { margin: 0; }
 
 .sponsored { padding: 3px 3px 3px 5px; background-color: #fffb22; color: #2a2a2a; font-weight: 700; font-size: 12px; letter-spacing: 2px; }
+
+.cke_maximized { margin-top: 50px !important; }
