--- a/mainsite/static/www/css/inline.css
+++ b/mainsite/static/www/css/inline.css
@@ -5,7 +5,9 @@
 /* Fonts */
 /* Misc */
 /* Images */
-.wwwInLineBox { background-color: #e7e7e7; padding: 15px; margin: 20px 0; }
+html, body, h1, h3, h2, h4, p { font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; }
+
+.wwwInLineBox { font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; background-color: #e7e7e7; padding: 15px; margin: 20px 0; }
 .wwwInLineBox h3 { padding: 0 0 15px 0; margin: 0 0 15px 0; border-bottom: 1px dotted #57575a; font-size: 20px; font-weight: 700; }
 
 .ogfInLineBox { background-color: #e7e7e7; padding: 15px; margin: 20px 0; }
