--- a/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
+++ b/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
@@ -15,7 +15,7 @@
                         </figure>
                     {% endif %}
                     <div class="story-text">
-                        <span class="pub-date">{{ article.date }}</span>
+                        <span class="pub-date">{{ article.date|date:"d F Y" }}</span>
                         <h3>{{ article.title }}</h3>
 
                         {% if article.sponsored %}
