--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -322,3 +322,20 @@
     }
   }
 }
+.detailImgWrap, .detailImgWrapFull, .detailImgWrapLeft {
+  overflow:             hidden;
+  -webkit-background-size:cover;
+  background-size:      cover;
+  background-position:  center;
+}
+.detailImgWrap {
+  height:               250px;
+}
+.detailImgWrapFull {
+  height:               350px;
+}
+.detailImgWrapLeft {
+  //width: 100%;
+  //height: 100%;
+  min-height: 250px;
+}
