--- a/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
+++ b/spe_blog/templates/spe_blog/plugins/picture_with_text_below.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load i18n cms_tags sekizai_tags %}
 
 {% if articles.count > 1 %}
     <div class="row">
@@ -11,7 +11,7 @@
                 <div class="story-wrap row">
                     {% if article.picture and article.picture.url %}
                         <figure class="thumb">
-                            <div class="img-wrap"><img src="{{ article.picture.url }}" class="img-responsive"/></div>
+                            <div class="img-wrap detailImgWrap" style="background-image: url({{ article.picture.url }})"></div>
                         </figure>
                     {% endif %}
                     <div class="story-text">
@@ -38,3 +38,20 @@
 {% if articles.count > 1 %}
     </div>
 {% endif %}
+
+{% addtoblock "js" %}
+    <script type="text/javascript" charset="utf-8">
+        $( document ).ready(function() {
+
+{#            $('.detailImgWrap').each(function(i, obj) {#}
+{#                var wrapHeight = 250;#}
+{#                var imgHeight = $('.detailImgWrap').height();#}
+{##}
+{#                if (imgHeight > wrapHeight) {#}
+{#                    $(this).find('.detailArticleImage').css({"margin-top": (imgHeight - wrapHeight) / 2});#}
+{#                }#}
+{#            });#}
+
+        });
+    </script>
+{%  endaddtoblock %}
